# pyeq3

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml  coverage.yml
contrib/utilities/: indent
examples/: run_examples.sh  test_examples.sh
examples/Cluster/: FitAllEquations_2D.py  FitAllEquations_3D.py
examples/Complex/: FitAllEquationsInSeries_LargeResultList_2D.py  FitAllEquationsInSeries_LargeResultList_3D.py  FitAllEquationsInSeries_NoResultList_2D.py  FitUsingMultipleNonlinearSolvers_2D.py
examples/FitMultipleFunctions/: fit_custom_functions.py
examples/GraphConfidenceIntervals/: CIexample.py
examples/List/: ListAllExtendedVersionsOfEquations_2D.py  ListAllExtendedVersionsOfEquations_3D.py  ListAllStandardEquations_2D.py  ListAllStandardEquations_3D.py
examples/NodeJS/: generator.py
examples/Parallel/: FitAllEquationsInParallel_NoResultList_2D.py
examples/Simple/: CoefficientBounds_2D.py  CompareMultipleFittingAlgorithms_2D.py  CreateExtendedVersionOfOneNamedEquation_2D.py  EstimatedInitialCoefficients_3D.py  FitOneNamedEquation_2D.py  FitOneNamedEquation_3D.py  FitUserCustomizablePolynomial_2D.py  FitUserDataToFunctions.py  FitUserData_2D.py  FitUserDefinedFunction_2D.py  FitWeightedData_2D.py  FixedAndBoundedCoefficients.py  FixedCoefficient_3D.py  RebuildSplineFromStoredCoefficients_3D.py  Spline_3D.py
pyeq3/: IModel.py  UdfSafety.py  __init__.py
pyeq3/ExtendedVersionHandlers/: ExtendedVersionHandler_LinearDecay.py  (+12 more)
unittests/: NIST_TestingUtilities.py  Test_CalculateCoefficientAndFitStatistics.py  Test_DataCache.py  Test_DataConverterService.py  Test_ExtendedVersionHandlers.py  Test_ModelSolveMethods.py  Test_NIST.py  Test_OutputSourceCodeService.py  Test_SolverService.py  Test_UserDefinedFunctionSafety.py  __init__.py
(+26 files in other folders)
