[tool.poetry]
name = "pyeq3"
version = "12.7.0a0"
description = "An equation, curve and surface fitting library"
readme = "README.md"
readme-content-type = "text/x-rst"
authors = ["James Phillips, Robert Myhill <bob.myhill@bristol.ac.uk>"]
homepage = "https://github.com/equations-project/pyeq3"
license = "BSD"
keywords = ["curve", "surface", "fitting"]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[tool.poetry.dependencies]
python = "^3.10"
# Explicit range rather than caret: "^1.24" caps at <2.0, but the odrpack-based
# fitting path runs fine on numpy 2.x. Allow both 1.x and 2.x; cap at the next
# major.
numpy = ">=1.24,<3"
scipy = "^1.10"
# Replaces scipy.odr which is deprecated in scipy 1.17 and slated for
# removal in scipy 1.19. odrpack wraps the same ODRPACK95 Fortran
# backend with a function-style API.
odrpack = "^0.5.0"

# Optional dependencies for plotting and documentation are listed in the [tool.poetry.extras] section below.
matplotlib = {version = "^3.7", optional = true}
pypandoc = {version = "^1.8.0", optional = true}

[tool.poetry.group.dev.dependencies]
black = "23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# add optional dependencies for plotting and documentation
[tool.poetry.extras]
output = ["matplotlib", "pypandoc"]
docs = ["pypandoc"]
